--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatify - Realtime Chat Application</title>
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <nav>
-        <img class="logo" src="/public/chat.png" alt="Logo">
+        <img class="logo" src="/chat.png" alt="Logo">
     </nav>
     <div class="container">
         
@@ -18,6 +18,6 @@
         <textarea id= "messageInp" class="send-container" placeholder="Write a message here and press enter to send" cols="30" rows="1"></textarea>
     </div>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/public/client.js"></script>
+    <script src="/client.js"></script>
 </body>
 </html>
